--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,12 +2,14 @@ name: Android Build
 on:
   push:
     branches: [main, master]
+    tags:
+      - 'v*'
   pull_request:
     branches: [main, master]
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build-android:
@@ -104,10 +106,47 @@ jobs:
           cp -r artifacts/libzip-android-*/* libzip-android-all/
           tar -czf libzip-android-all.tar.gz libzip-android-all
 
+      - name: Create Individual Architecture Packages
+        run: |
+          cd artifacts
+          for dir in libzip-android-*/; do
+            tar -czf "../${dir%/}.tar.gz" "$dir"
+          done
+
       - name: Upload Combined Package
         uses: actions/upload-artifact@v4
         with:
           name: libzip-android-all-architectures
-          path: libzip-android-all.tar.gz
+          path: |
+            libzip-android-all.tar.gz
+            libzip-android-*.tar.gz
           retention-days: 30
+
+  release:
+    needs: package-all
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    name: Create GitHub Release
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download All Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: libzip-android-all-architectures
+          path: release-files
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            release-files/libzip-android-all.tar.gz
+            release-files/libzip-android-*.tar.gz
+          generate_release_notes: true
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
